New Crowdin translations (#909)